docs: preview at 896x504, benchmark refresh from the latest capture